[project]
name = "quantum-sdk"
version = "0.1.0"
description = "Python client SDK for the Quantum AI API"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
async = ["httpx[http2]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
