[project]
name = "quantum-ai-sdk"
version = "0.4.0"
description = "Cosmic Duck SDK — 100+ AI endpoints across 10 providers"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "sdk", "cosmic-duck", "quantum-ai", "openai", "anthropic", "gemini", "grok"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
async = ["httpx[http2]"]
realtime = ["websockets>=13.0"]

[project.urls]
Homepage = "https://cosmicduck.dev/developers"
Repository = "https://github.com/quantum-encoding/quantum-sdk-python"
Documentation = "https://docs.quantumencoding.ai"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_sdk*"]
